# coding-agents-session-picker

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: conversation.rs  main.rs  output.rs  pick.rs  scrape.rs  session.rs
src/providers/: claude.rs  codex.rs  cursor.rs  mod.rs  pi.rs
tests/: cli.rs
