[package]
name = "coding-agents-session-picker"
version = "0.1.7"
edition = "2024"
description = "Fast terminal picker for resuming coding-agent sessions"
license = "MIT"
repository = "https://github.com/khoi/coding-agents-session-picker"
homepage = "https://github.com/khoi/coding-agents-session-picker"
readme = "README.md"
keywords = ["cli", "session", "picker"]
categories = ["command-line-utilities"]

[[bin]]
name = "ap"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
jiff = { version = "0.2.32", features = ["serde"] }
nucleo-matcher = "0.3.1"
ratatui = { version = "0.30.2", features = ["unstable-rendered-line-info"] }
rayon = "1.12.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
terminal-colorsaurus = "1.0.3"

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
tempfile = "3.27.0"

[lints.clippy]
all = "warn"

[profile.release]
lto = "thin"
